--- a/index.html
+++ b/index.html
@@ -3,19 +3,35 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Philip und das Königreich der Klobürsten</title>
+  <title>Philip und die Flachwitze-Challenge</title>
   <link rel="stylesheet" href="style.css"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
   <div id="game-container">
-    <h1>👑 Philip und das Königreich der Klobürsten</h1>
+    <h><div style="text-align: center; font-size: 34px; font-weight: bold;">👑 Philip und die Flachwitze-Challenge 👑</div></h>
     <div id="intro">
       <p>
-        Du bist 18 geworden. Zeit, dich wie ein echter Mann zu beweisen: mit Furzlogik, Biergeschick
-        und dem Mut, ein sprechendes Klo zu küssen. Bist du bereit für die Prüfung der Peinlichkeit?
+	    <div style="text-align: center; font-size: 28px;">
+        Oma<span style="font-size: 2em;">👵</span>Opa<span style="font-size: 2em;">👴</span>Tante Silvana <span style="font-size: 2em;">👧</span> 
+		<br> und dein Onkel Sascha <span style="font-size: 2em;">🕺</span> 
+		<br>
+        <br>		
+		gratulieren dir herzlichst zu deinem 18. Geburtstag!
+		</div>
+        <br>
+		<br>
+		<div style="text-align: center; font-size: 20px;">
+		Ab sofort musst du dich wie ein echter Mann zu beweisen, um dein Geschenk zu erhalten. 
+		<br>
+		Du brauchst dazu eine Menge Humor, etwas Spielglück und einen scharfen Verstand. <br>
+		<br>
+		Bist du bereit für die Prüfungen?
+		</div>
       </p>
-      <button onclick="startGame()">JA, ICH BIN BEREIT!</button>
+	  <div style="text-align: center;">
+      <button onclick="startGame()">JA, ICH BIN BREIT!</button>
+	  </div>
     </div>
 
     <div id="level-container" style="display: none;"></div>
